# hidfox

./: .gitignore  Cargo.toml  Makefile  README.adoc  flake.nix
addon/: background.ts  config.ts  content.ts  criticalSection.ts  injected.ts  inpage.ts  listener.ts  manifest.jsonnet  packet.ts  popup.tsx  rpc.ts  webpack.config.js
addon/background/: index.ts
addon/content/: index.ts
addon/injected/: hid.ts  hidDevice.ts  index.ts
addon/popup/: index.tsx
addon/shared/: rpcStorage.ts
bifrostlink/: Cargo.toml
bifrostlink/src/: connection.rs  error.rs  event.rs  internal_handlers.rs  lib.rs  notification.rs  packet.rs  port.rs  request.rs  route.rs  rpc.rs  util.rs
bifrostlink/src/callback/: notification.rs  request.rs
bifrostlink/src/polling/: notification.rs  request.rs
docs/: youtube.adoc
enum_variants/: Cargo.toml
enum_variants/procedural/: Cargo.toml
enum_variants/procedural/src/: lib.rs
enum_variants/src/: lib.rs
native/: native.jsonnet
src/: hidroot.rs  main.rs  storage.rs
