[package]
name = "webhid-firefox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.0"
bytes = "1.4.0"
enum_variants = { path = "enum_variants" }
bifrostlink = { path = "bifrostlink" }
hidapi = { version = "2.3.2", features = ["linux-static-hidraw"] }
rusb = "0.9.2"
rusb-async = "0.0.1-alpha"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_path_to_error = "0.1.11"
serde_with = "3.0.0"
sha2 = "0.10.6"
tokio = { version = "1.28.1", features = ["macros", "rt", "full"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4"] }
thiserror = "1.0.40"
futures = "0.3.28"

[target."cfg(tokio_unstable)".dependencies]
console-subscriber = "0.1.9"

[workspace]
members = ['enum_variants', 'enum_variants/procedural', 'bifrostlink']
